# kdsh

./: .gitignore  LICENSE  README.md  getscv.py  output.csv  result.csv
agent/: .env.dev  README.md  classification_results.csv  package-lock.json  pyproject.toml
agent/api/: main.py
agent/models/: config.py  schemas.py
agent/services/: agent.py  breakdown_agent.py  classification_service.py  evaluation_service.py  final_classifier.py  llm_based_classifier.py  paper_chooser.py  paper_evaluator.py  pdf_service.py  rag_based_classifier.py  similarity_based_classifier.py  tree_of_thoughts.py  visual_agent.py
agent/single_paper_analysis/: evaluation_results.csv
agent/single_paper_analysis/R005/: R005_analysis_summary.txt  R005_thought_tree_data.json
agent/test_analysis/: evaluation_results.csv
agent/test_analysis/P001/: P001_analysis_summary.txt  P001_thought_tree_data.json
agent/test_analysis/P002/: P002_analysis_summary.txt  P002_thought_tree_data.json
agent/test_analysis/P003/: P003_analysis_summary.txt  P003_thought_tree_data.json
agent/test_analysis/P004/: P004_analysis_summary.txt  P004_thought_tree_data.json
agent/test_analysis/P005/: P005_analysis_summary.txt  P005_thought_tree_data.json
agent/test_analysis/P006/: P006_analysis_summary.txt  P006_thought_tree_data.json
agent/test_analysis/P007/: P007_analysis_summary.txt  P007_thought_tree_data.json
agent/test_analysis/P008/: P008_analysis_summary.txt  (+1 more)
agent/tests/: agent_testing.py
agent/utils/: ai_content_detector_tool.py  embedding_client.py  get_similarity.py  prompts.py  tavily.py
(+139 files in other folders)
